# pywce

./: .env  .env.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENCE  MANIFEST.in  README.md  engine_logger.py  logging.conf  pyproject.toml  requirements.txt  setup.py  test_ai.py  test_v.py
.github/workflows/: pypi-publish.yml  pywce-pypi-publish.yml
client/: README.md
client/portal/: portal.py
example/: .env.example  .gitignore  README.md  agents.json  dependencies.py  main.py  requirements.txt  ui-builder-flow.json
example/ai_agents/: .env.example  .gitignore  README.md
example/booking_flow_endpoint/: flow.json
example/booking_flow_static/: flow.json
example/car_rental/: .gitignore  README.md  main.py
example/chatbot/: main.py
example/common/: app_logger.py  config.py  data.py  global_hooks.py  routes.py  tasks.py
example/ehailing/: .gitignore  main.py
example/engine_chatbot/: .gitignore  dependencies.py  main.py  settings.py
example/hooks/: name_template.py
example/pychatbot/: main.py
example/road_sos/: README.md
example/services/: capture_ride.py  name_template.py
example/standalone_chatbot/: dependencies.py  main.py  settings.py
example/templates/: ehailing-bot.yaml  (+2 more)
portal/: README.md  pubsub.py  pubsub_test.py  requirements.txt  rxconfig.py  seed.py
pysession/: isession_manager.py
pywce/: __init__.py  engine_logger.py
src/: engine.py  worker.py
tests/: test_cachetool_session_manager.py  test_default_session_manager.py  test_engine.py  test_session_manager.py  test_whatsapp.py  test_yaml_json_storage_manager.py
(+179 files in other folders)
