[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywce"
version = "3.0.0"
authors = [
    { name = "Donald Chinhuru", email = "donnclab@gmail.com" },
]
description = "A templates-driven framework for building complete WhatsApp chatbots"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENCE" }

keywords = ["whatsapp", "chatbot", "automation", "templates", "hooks"]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Operating System :: OS Independent"
]

dependencies = [
    "httpx~=0.28.1", "ruamel.yaml~=0.18.10",
    "requests-toolbelt~=1.0.0", "Jinja2~=3.1.6"
]

[project.urls]
"Homepage" = "https://github.com/DonnC/pywce"
"Bug Tracker" = "https://github.com/DonnC/pywce/issues"
"Source Code" = "https://github.com/DonnC/pywce"
"Documentation" = "https://docs.page/donnc/wce"


[tool.setuptools.packages.find]
include = ["pywce*"]